--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,476 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Disney+ clone</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  </head>
-  <body>
-    <nav class="navbar">
-      <img src="images/logo.png" class="brand-logo" alt="" />
-      <ul class="nav-links">
-        <li class="nav-items"><a href="#">TV</a></li>
-        <li class="nav-items"><a href="#">Movies</a></li>
-        <li class="nav-items"><a href="#">Sports</a></li>
-        <li class="nav-items"><a href="#">Premium</a></li>
-      </ul>
-      <div class="right-container">
-        <input type="text" class="search-box" placeholder="search" />
-        <button class="sub-btn">Subscribe</button>
-        <a href="#" class="login-link">Login</a>
-      </div>
-    </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kastro's Hotstar App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Kastro's Hotstar App</h1>
+        
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Disney%2B_Hotstar_logo.svg/2560px-Disney%2B_Hotstar_logo.svg.png" alt="Hotstar Logo" class="logo">
 
-    <div class="carousel-container">
-      <div class="carousel">
-        <!-- <div class="slider">
-          <div class="slide-content">
-            <h1 class="movie-title">Loki</h1>
-            <p class="movie-des">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              laborum autem reprehenderit obcaecati saepe maxime, eaque
-              perferendis ipsa! Officiis minus blanditiis ab placeat non laborum
-              iste delectus eaque doloribus nisi.
-            </p>
-          </div>
-          <img src="images/slider 1.png" alt="" />
-        </div> -->
-      </div>
+        <select id="languageDropdown">
+            <option value="">Choose Language</option>
+            <option value="Telugu">Telugu</option>
+            <option value="Tamil">Tamil</option>
+            <option value="Malayalam">Malayalam</option>
+            <option value="Kannada">Kannada</option>
+            <option value="Hindi">Hindi</option>
+        </select>
+
+        <div id="songDetails">
+            <img id="coverImage" src="" alt="Cover Image" style="display: none; width: 100px; height: 100px; border-radius: 50%;">
+            <h2 id="songTitle"></h2>
+        </div>
+
+        <audio id="audioPlayer" controls style="display: none;"></audio>
+
+        <div class="bars">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
+
+        <div class="links">
+            <a href="https://www.youtube.com/playlist?list=PLs-PsDpuAuTeNx3OgGQ1QrpNBo-XE6VBh" target="_blank">
+                <img src="https://img.icons8.com/ios-filled/50/ff2d55/youtube-play.png" alt="Docker by Kastro"> Docker by Kastro
+            </a>
+            <a href="https://www.youtube.com/watch?v=opJAfDOCZuI" target="_blank">
+                <img src="https://img.icons8.com/ios-filled/50/ff2d55/youtube-play.png" alt="Nexus by Kastro"> Nexus by Kastro
+            </a>
+            <a href="https://www.linkedin.com/in/kastro-kiran/" target="_blank">
+                <img src="https://img.icons8.com/ios-filled/50/ff2d55/linkedin.png" alt="Connect with me"> Connect with me
+            </a>
+        </div>
     </div>
 
-    <div class="video-card-container">
-			<div class="video-card">
-				<img src="images/disney.png" class="video-card-image" alt="" />
-				<video src="videos/disney.mp4" mute loop class="card-video"></video>
-			</div>
-
-			<div class="video-card">
-				<img src="images/pixar.png" class="video-card-image" alt="" />
-				<video src="videos/pixar.mp4" mute loop class="card-video"></video>
-			</div>
-
-			<div class="video-card">
-				<img src="images/geographic.png" class="video-card-image" alt="" />
-				<video src="videos/geographic.mp4" mute loop class="card-video"></video>
-			</div>
-
-			<div class="video-card">
-				<img src="images/marvel.png" class="video-card-image" alt="" />
-				<video src="videos/marvel.mp4" mute loop class="card-video"></video>
-			</div>
-
-			<div class="video-card">
-				<img src="images/star-wars.png" class="video-card-image" alt="" />
-				<video src="videos/star-war.mp4" mute loop class="card-video"></video>
-			</div>
-		</div>
-
-		<h1 class="title">recommended for you</h1>
-
-		<div class="movies-list">
-			<button class="pre-btn" title="btn">
-				<img src="images/pre.png" alt="" />
-			</button>
-			<button class="nxt-btn" title="btn">
-				<img src="images/nxt.png" alt="" />
-			</button>
-			<div class="card-container">
-				<div class="card">
-					<img src="images/poster 1.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 2.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 3.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 4.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 5.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 6.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 7.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 8.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 9.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 10.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 11.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 12.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<h1 class="title">popular shows</h1>
-
-		<div class="movies-list">
-			<button class="pre-btn" title="btn">
-				<img src="images/pre.png" alt="" />
-			</button>
-			<button class="nxt-btn" title="btn">
-				<img src="images/nxt.png" alt="" />
-			</button>
-			<div class="card-container">
-				<div class="card">
-					<img src="images/poster 12.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 11.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 10.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 9.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 8.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 7.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 6.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 5.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 4.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 3.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 2.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 1.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<h1 class="title">latest & trending</h1>
-
-		<div class="movies-list">
-			<button class="pre-btn" title="btn">
-				<img src="images/pre.png" alt="" />
-			</button>
-			<button class="nxt-btn" title="btn">
-				<img src="images/nxt.png" alt="" />
-			</button>
-			<div class="card-container">
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/244/1280244-v-58d850cbecc4"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/3195/1263195-v-b44cc0202665"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/3455/1283455-v-6883176a7972"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/1901/1231901-v-17c820e1cbe4"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/4158/1254158-v-8293462a94f2"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img src="images/poster 3.png" class="card-img" alt="" />
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/9317/1269317-v-c851767a526b"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/1518/1161518-v-8d86a7ed8500"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/4965/1094965-v-185c17cd9ace"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/3017/1083017-v-4ab3c2456f2a"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/2213/1042213-v-1416e8e25397"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-
-				<div class="card">
-					<img
-						src="https://img1.hotstarext.com/image/upload/f_auto,t_web_vl_3x/sources/r1/cms/prod/2733/1122733-v-5df3bdae2d7a"
-						class="card-img"
-						alt=""
-					/>
-					<div class="card-body">
-						<h2 class="name">movie name</h2>
-						<h6 class="des">Lorem ipsum dolor sit amet consectetur.</h6>
-						<button class="watchlist-btn">add to watchlist</button>
-					</div>
-				</div>
-			</div>
-		</div>
-    <script src="app.js" async></script>
-  </body>
+    <script src="app.js"></script>
+</body>
 </html>
